# tubes2-oe

./: Makefile  Makefile.global.in  README  build.bat  configure  configure.in
config/: mkshortcut.vbs
desktop/: Makefile  tubes.desktop  tubes2oe.desktop  tubes2trial.desktop
documents/: AUTHORS  ChangeLog  INSTALL  Makefile  README  free_reg_form.odt  free_reg_form.txt  ordrform.txt  reg_form.odt  reg_form.txt  support_form.odt  support_form.txt
documents/hu/: INSTALL  Makefile  README  free_reg_form.odt  free_reg_form.txt  ordrform.txt  reg_form.odt  reg_form.txt  support_form.odt  support_form.txt
documents/sample/: Makefile  sample-triode-1.csv  sample-triode-2.csv  sample-triode.t2c
help/: Makefile
help/help_en/: about.html  cmdparams.html  contact.html  dialog_psearch.html  dialog_settings.html  dialog_sort.html  dialog_tsearch.html  dialog_tsearchallcat.html  dialog_upgrade.html  free_registration.html  free_registration.html.in  hotkeys.html  index.html  introduction.html  local_bms.html  local_desc.html  local_pinout.html  local_table.html  main_bms.html  main_file.html  main_help.html  main_search.html  main_view.html  order.html  sign_cv.html  (+11 more)
languages/: Makefile  tubes.pot  tubes2oe.pot  tubes2oe_hu.mo  tubes2oe_hu.po  tubes2trial.pot  tubes2trial_hu.mo  tubes2trial_hu.po  tubes_hu.mo  tubes_hu.po
manual/: Makefile  cxedf_en.5  cxedf_hu.5  t2c_en.5  t2c_hu.5  tubes2oe_en.1  tubes2oe_hu.1  tubes2trial_en.7  tubes2trial_hu.7  tubes_en.7  tubes_hu.7  xedf_en.5  xedf_hu.5
palettes/: black.pal  blue.pal  green.pal  red.pal  white.pal  yellow.pal
source/: Makefile  config.inc.in  frmabout.lfm  frmabout.lrt  frmabout.pas  frmabout.pp  frmconfig.lfm  frmconfig.lrt  frmconfig.pas  frmconfig.pp  frmdrawer.lfm  frmdrawer.lrs  frmdrawer.lrt  frmdrawer.pas  frmdrawer.pp  frmmain.lfm  frmmain.lrt  frmmain.pas  frmmain.pp  frmparsearch.lfm  frmparsearch.lrt  frmparsearch.pas  frmparsearch.pp  frmprogressbar.lfm  frmprogressbar.lrt  frmprogressbar.pas  frmprogressbar.pp  frmsort.lfm  frmsort.lrt  frmsort.pas  frmsort.pp  frmsubst.lfm  frmsubst.lrt  frmsubst.pas  frmtester.lfm  frmtester.lrt  frmtester.pas  frmtester.pp  frmtextview.lfm  frmtextview.lrt  (+23 more)
(+72 files in other folders)
