dnl +--------------------------------------------------------------------------+
dnl | Tubes2 2.1 trial * Electrontube catalogue                                |
dnl | Copyright (C) 2008-2016 Pozsar Zsolt <pozsarzs@gmail.com>                |
dnl | configure.in                                                             |
dnl | Autoconf input file.                                                     |
dnl +--------------------------------------------------------------------------+

AC_INIT(source/config.inc.in)
AC_CONFIG_AUX_DIR(config)
AC_CANONICAL_SYSTEM

AC_PREFIX_DEFAULT("/usr/local")
test x"$prefix" = xNONE && prefix="$ac_default_prefix"

AC_PATH_PROG(rm, rm, no)
AC_PATH_PROG(install, install, no)
AC_CHECK_PROGS(make, gmake make)

AC_CHECK_PROGS(havefpc,ppc386,no)
test x"$havefpc" = xno && AC_MSG_ERROR(There is not FreePascal compiler on your system.)

AC_CHECK_PROGS(havelazarus1,lazarus,no)
AC_CHECK_PROGS(havelazarus2,lazarus-ide,no)
test x"$havelazarus1" = xno && test x"$havelazarus2" = xno && AC_MSG_ERROR(There is not Lazarus IDE on your system.)
lazdir=`find /usr/lib/lazarus/*.*.* -maxdepth 0`

version=`cat documents/VERSION`

architecture='i386'
case $target_cpu in
  'i586') architecture='i586';;
  'i686') architecture='i586';;
esac
case $architecture in
  'i386') fpflag='-Op386';;
  'i586') fpflag='-OpPENTIUM';;
esac

AC_SUBST(architecture)
AC_SUBST(bindir)
AC_SUBST(datadir)
AC_SUBST(fpflag)
AC_SUBST(install)
AC_SUBST(lazdir)
AC_SUBST(libdir)
AC_SUBST(make)
AC_SUBST(prefix)
AC_SUBST(rm)
AC_SUBST(sysconfdir)
AC_SUBST(version)

AC_OUTPUT( Makefile.global\
           help/help_en/registration.html\
           help/help_en/free_registration.html\
           help/help_en/support.html\
           help/help_hu/registration.html\
           help/help_hu/free_registration.html\
           help/help_hu/support.html\
           source/config.inc )

echo "
Summary
=======
    Op. system		$host_os
    Target processor	$architecture
    Programme version	$version
    Install prefix	$prefix

  Type '${make}' for compilation and then '${make} install'.
"
